# rov-sim

./: .gitignore  BeaumontOceanWorld.sdf  CMakeLists.txt  LICENSE  OceanWorld.sdf  README.md  WaterwitchOceanWorld.sdf  added_mass_matrix_solver.py  initialize_ros_communication.bash  intiallize_ros_communication.bash  start_simulation_headless.bash  third-party-licenses.txt
include/: EER_Claws.hh  EER_Hydrodynamics.hh  EER_Servo.hh  EER_Thruster.hh  README.md
models/Beaumont/: chassis_assembly.stl  model.sdf
models/Waterwitch/: model.sdf  waterwitch_collision.stl  waterwitch_visual.stl
plugins/T200_Thruster_Behavior/: T200_Thruster_Behavior_10V.csv  T200_Thruster_Behavior_12V.csv  T200_Thruster_Behavior_14V.csv  T200_Thruster_Behavior_16V.csv  T200_Thruster_Behavior_18V.csv  T200_Thruster_Behavior_20V.csv
src/: EER_Buoyancy.cc  EER_Buoyancy.hh  EER_Claws.cc  EER_Claws.hh  EER_Hydrodynamics.cc  EER_Servo.cc  EER_Thruster.cc  EER_Thruster.hh  README.md
worlds/: BeaumontOceanWorld.sdf  CompetitionWorld2025.sdf  WaterwitchOceanWorld.sdf
